gnome-ask-password-agent: parse `--system` to watch for system passwords

--- a/src/systemd-gnome-ask-password-agent.service
+++ b/src/systemd-gnome-ask-password-agent.service
@@ -12,4 +12,4 @@ Description=Forward Password Requests to GNOME Password Agent
 After=systemd-user-sessions.service
 
 [Service]
-ExecStart=systemd-gnome-ask-password-agent
+ExecStart=systemd-gnome-ask-password-agent --system
