--- a/src/meson.build
+++ b/src/meson.build
@@ -10,6 +10,7 @@ sgapa_files = files('gnome-ask-password-agent.vala')
 sgapa = executable('systemd-gnome-ask-password-agent', sgapa_files,
                    dependencies: [common_flags, gtk3, gee, gio_unix, libnotify, posix],
                    install: true)
+install_data('org.freedesktop.systemd.gnome-ask-password-agent.desktop', install_dir: applicationsdir)
 install_data('systemd-gnome-ask-password-agent.rules', install_dir: polkitrulesdir)
 sgapa_units = files('systemd-gnome-ask-password-agent.path',
                     'systemd-gnome-ask-password-agent.service')
