gnome-ask-password-agent: remove unused `Linux` package

--- a/src/meson.build
+++ b/src/meson.build
@@ -9,6 +9,6 @@ install_data('systemadm.appdata.xml', install_dir: appdatadir)
 
 sgapa_files = files('gnome-ask-password-agent.vala')
 sgapa = executable('systemd-gnome-ask-password-agent', sgapa_files,
-                   dependencies: [gtk3, gee, gio_unix, libnotify, linux, posix],
+                   dependencies: [gtk3, gee, gio_unix, libnotify, posix],
                    install: true,
                    install_dir: bindir)
