Modernize AppStream metadata
Also convert both metainfo and desktop file names to rDNS format

--- a/src/io.systemd.systemadm.desktop
+++ b/src/io.systemd.systemadm.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=systemadm
-Comment=Manage Systemd Units
+Comment=Manage systemd units
 Exec=systemadm
 Icon=applications-system
 Terminal=false
